base/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scg-be
spec:
  selector:
    app: scg-be
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 8000
  type: NodePort
