base/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scg-ingress-be
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://fe.scg.skku.ac.kr"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
spec:
  ingressClassName: nginx
  rules:
  - host: be.scg.skku.ac.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scg-be
            port:
              number: 9002
  tls: 
    - hosts:
      - be.scg.skku.ac.kr
      secretName: gitops-be-tls
